CEP2_Lakan-Ilaw_ERC_NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cep2-network-policy
  namespace: cep-project2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: cep-project2
  - from:
    - podSelector: {}
